# course_work_database

./: .gitignore  README.md  config.py  database.ini_example  main.py  pyproject.toml  settings.py  user_exceptions.py
src/: db_manager.py  user_interaction.py  utils.py  work_api_employers.py  work_api_vacancies.py
